--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-14  Ian Lance Taylor  <ian@airs.com>
+
+	* Makefile.in (install-only): Use $(SHELL) when running
+	mkinstalldirs.
+
 2003-05-13  Ian Lance Taylor  <ian@airs.com>
 
 	* MAINTAINERS (write after approval): Add myself.
