--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-14  Jeff Johnston  <jjohnstn@redhat.com>
+
+	Roland McGrath  <roland@redhat.com>
+	* gdb.threads/linux-dp.exp: Account for fact that in nptl model 
+	there is no manager thread.
+
 2003-05-08  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* gdb.threads/schedlock.exp: Remove assumption that all threads 
