--- a/sim/mips/ChangeLog
+++ b/sim/mips/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-16  Ian Lance Taylor  <ian@airs.com>
+
+	* Makefile.in (SHELL): Make sure this is defined.
+	(various): Use $(SHELL) whenever we invoke move-if-change.
+
 2003-05-03  Chris Demetriou  <cgd@broadcom.com>
 
 	* cp1.c: Tweak attribution slightly.
