--- a/sim/ppc/ChangeLog
+++ b/sim/ppc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-16  Ian Lance Taylor  <ian@airs.com>
+
+	* Makefile.in (various): Use $(SHELL) whenever we invoke
+	move-if-change.
+
 2003-02-27  Andrew Cagney  <cagney@redhat.com>
 
 	* sim_calls.c (sim_open, sim_create_inferior): Rename _bfd to bfd.
