--- a/sim/v850/ChangeLog
+++ b/sim/v850/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-16  Ian Lance Taylor  <ian@airs.com>
+
+	* Makefile.in (SHELL): Make sure this is defined.
+	(tmp-igen): Use $(SHELL) whenever we invoke move-if-change.
+
 2003-04-06  Nick Clifton  <nickc@redhat.com>
 
 	* simops.c (OP_40): Delete.  Move code to...
