--- a/gdb/mi/ChangeLog
+++ b/gdb/mi/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-16  Andrew Cagney  <cagney@redhat.com>
+
+	* mi-main.c (mi_setup_architecture_data): 
+
 2003-05-12  Elena Zannoni  <ezannoni@redhat.com>
 
 	* mi-mi-cmd-stack.c (list_args_or_locals): Rename VAR_NAMESPACE to
