2003-05-19  Michal Ludvig  <mludvig@suse.cz> 	* x86-64-tdep.c (x86_64_dwarf2gdb_regno_map): Fix 	register numbers mapping.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-19  Michal Ludvig  <mludvig@suse.cz>
+
+	* x86-64-tdep.c (x86_64_dwarf2gdb_regno_map): Fix
+	register numbers mapping.
+
 2003-05-18  Adam Fedor  <fedor@gnu.org>
 
 	* symtab.c (completion_list_objc_symbol): New function.
