--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-20  Kris Warkentin  <kewarken@qnx.com>
+
+	* nto-tdep.c (fetch_core_registers): Match gdb's idea of
+	regset numbering rather than our own.
+
 2003-05-19  David Carlton  <carlton@bactrian.org>
 
 	* config/djgpp/fnchange.lst: Add testsuite/gdb.c++/rtti*.
